Replace Googles ImmutableMap/Set builders with JDK Map/Set.of